testcases/negative/invalid_structured_value.vcf
BEGIN:VCARD
VERSION:4.0
FN:John Doe
N:Doe;John;Middle;Dr.;Jr.;ExtraField;TooManyFields
END:VCARD
